project/logs/20250523_014536.log
Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

complete create D3D12Device!!!

Hello,DirectX!

clintSize:1280,720

Begin CompileShader, path:Object3D.VS.hlsl,profile:vs_6_0

Compile Succeded,path:Object3D.VS.hlsl,profile:vs_6_0

Begin CompileShader, path:Object3D.PS.hlsl,profile:ps_6_0

Object3D.PS.hlsl:24:57: warning: implicit truncation of vector type [-Wconversion]
    float32_t4 textureColor = gTexture.Sample(gSampler, input.texcoord);
                                                        ^
Object3D.PS.hlsl:24:31: error: local resource not guaranteed to map to unique global resource.
    float32_t4 textureColor = gTexture.Sample(gSampler, input.texcoord);
                              ^
Object3D.PS.hlsl:24:31: error: local resource not guaranteed to map to unique global resource.

